--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,8 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #2a0944;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -17,3 +17,6 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+//card
+$card-bg: #c0c3c9;
